# recipebox-API

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml
instance/: .env.example  dev.cfg  flask.cfg  flask_test.cfg  prod.cfg  test.cfg
my-app/: Dockerfile
recipebox/: __init__.py  app.py  extensions.py  factory.py  runcelery.py  settings.py
recipebox-fe/: Dockerfile  package-lock.json  package.json
recipebox-fe/public/: index.html  manifest.json
recipebox-fe/src/: App.css  App.js
recipebox-fe/src/Components/: AdderModal.js  Navbar.js  RecipeContent.js  Router.js  SearchAutoSuggest.js  ShoppingListItems.js  ShoppingListRecipes.js  SingleShoppingList.js
recipebox-fe/src/pages/: CreatedRecipes.js  Login.js  NewPassword.js  RecipeDetail.js  Recipes.js  Reset.js  ScrapingManifests.js  Search.js  ShoppingListDisplay.js  ShoppingListEdit.js  ShoppingListView.js  SignUp.js  StarredRecipes.js
recipebox/database/: models.py
recipebox/resources/: auth.py  errors.py  recipe.py  reset_password.py  routes.py  scraping.py  scraping_manifest.py  shopping_list.py  users.py
recipebox/services/: mail_service.py
recipebox/templates/email/: reset_password.html  reset_password.txt
recipebox/utils/: scrape_recipes.py
setup/docker/: Dockerfile
setup/scripts/: activate_mongo.sh  configure_traefik.sh
tests/: conftest.py  test_recipebox.py
tests/functional/: test_recipes_api.py  test_shopping_list_api.py  test_star_api.py  test_users_api.py
tests/unit/: test_models.py
traefik/: traefik.yml
(+6 files in other folders)
