[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = ""
authors = ["Luc Zbonack <lmzbonack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-mongoengine = "^0.9.5"
flask-restful = "^0.3.7"
dnspython = "^1.16.0"
flask-bcrypt = "^0.7.1"
flask-jwt-extended = "^3.24.1"
mongoengine = "^0.19.1"
pymongo = "^3.10.1"
python-dotenv = "^0.10.3"
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"
celery = "^4.4.0"
flask-cors = "^3.0.8"
blinker = "^1.4"
gunicorn = "^20.0.4"
flask-mail = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
